Fix layout on small screens
Viewport has been changed

--- a/css/style.css
+++ b/css/style.css
@@ -139,12 +139,12 @@ body{
     border: 4px solid #8A3600;
     box-shadow: 0px 0px 15px 2px #8A3600,inset 0px 0px 10px 0px #8A3600;
     border-radius: 15px;
-    margin: 0 0 0 -490px;
+    margin: 0 auto;
     padding-bottom: 10px;
     background-color: #FFD6A0;
     width: 980px;
-    position: absolute;
-    left: 50%;
+    /*position: absolute;
+    left: 50%;*/
 
 }
 
